syntax = "proto3";

package post;

option go_package = "github.com/ehsundar/insta/pkg/post";

import "google/protobuf/timestamp.proto";


message Post {
    int64 ident = 1;
    string caption = 2;
    repeated string images = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreatePostRequest {
    Post post = 1;
}

message CreatePostResponse {
    Post post = 1;
}

message ListPostsRequest {
    int32 count = 1;
    int64 last_item_ident = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
    int64 last_item_ident = 2;
}

service PostStorage {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
}
